# Interactive-Algorithm-Visualizer

./: Cargo.toml  README.MD  Trunk.toml  architecture.ini  claude-lessons.md  index.html  layout-planification.ini  rust-wasm-algo-lab.wasm
.github/workflows/: deploy.yml
pkg/: package.json  rust_wasm_algo_lab.d.ts  rust_wasm_algo_lab.js  rust_wasm_algo_lab_bg.wasm  rust_wasm_algo_lab_bg.wasm.d.ts
src/: grid.rs  lib.rs  main.rs  stats.rs  ui.rs
src/algorithms/: algorithm-guide.md  astar.rs  bfs.rs  dfs.rs  dijkstra.rs  mod.rs
src/maze/: mod.rs  prims.rs  recursive_backtracker.rs
web/: app.js  comparison.js  input.js  main.js  renderer.js  style.css
