# Cargo.toml
[package]
name = "rust-wasm-algo-lab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-wasm-algo-lab"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
js-sys = { version = "0.3", optional = true }

[features]
default = []
web = ["js-sys"]

[profile.release]
opt-level = 3
lto = true